--- a/django/Makefile
+++ b/django/Makefile
@@ -2,10 +2,14 @@ RUN_DEPS := dev_env
 run: $(RUN_DEPS)
 	dev_env/bin/python paper_tracker/manage.py runserver
 
+shell: $(RUN_DEPS)
+	dev_env/bin/python paper_tracker/manage.py shell
 makemigrations: $(RUN_DEPS)
 	dev_env/bin/python paper_tracker/manage.py makemigrations papers
 migrate: $(RUN_DEPS)
 	dev_env/bin/python paper_tracker/manage.py migrate
+admin_user: $(RUN_DEPS)
+	dev_env/bin/python paper_tracker/manage.py createsuperuser
 
 dev_env/timestamp: requirements.txt
 	virtualenv dev_env -p python3
